fix placeholder landing page's layout on small screens

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,19 +1,14 @@
 .content {
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.logo-container {
-    width: 100%;
-    margin-bottom: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.logo-container svg {
-    height: 150px;
+svg {
+    height: auto;
+    max-height: 300px;
+    width: 80%;
 }
